# chess-game

./: .gitignore  CMakeLists.txt  README.md  readme.txt
docs/: dependencies.md  unit_test_matrix.md
include/chess/: Board.h  ChessEngine.h  ChessWindow.h  Move.h  MoveValidator.h  Piece.h  Position.h
src/: Board.cpp  ChessEngine.cpp  MoveValidator.cpp
src/gui/: ChessWindow.cpp  main.cpp
tests/: test_board.cpp
